--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,22 @@ server:
   port: 8001
 spring:
   application:
-    name: 
+    name: UserService-microservice
   datasource:
-   url: jdbc:postgresql://localhost:5432/userservice
+   url: jdbc:postgresql://localhost:5433/userservice
    username: postgres
    password: root
   jpa:
    show-sql: true
    hibernate:
       ddl-auto: update 
+      
+eureka:
+  instance:
+   prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+   
